--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react-scripts": "5.0.1",
     "spinners-react": "^1.0.7",
     "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.6.3",
+    "sweetalert2-react-content": "^5.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
